<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center">

    <TextView
        android:id="@+id/usernameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Username"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/balanceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Balance: $0.00"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/redemptionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Request Daily Points"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/adminButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Admin Panel"
        android:visibility="gone"/> <!-- Hidden by default, will be shown if user is an admin -->

</LinearLayout>
