...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <Button
            android:id="@+id/userProfileButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="UserName" />

        <!-- Use a spacer View to push the logoutButton to the right -->
        <View
...
